syntax = "proto3";

package resdb;

message KVRequest {
    enum CMD {
        NONE = 0;
        SET = 1;
        GET = 2;
        GETVALUES = 3;
        GETRANGE = 4;
    }
    CMD cmd = 1;
    string key = 2;
    bytes value = 3;
    message Operation {
      CMD cmd = 1;
      string key = 2;
      bytes value = 3;
    }
    repeated Operation ops = 4;
}

message KVResponse {
    string key = 1;
    bytes value = 2;
    message Resp {
      string key = 1;
      bytes value = 2;
    }
    repeated Resp resp_info = 3;
}

